fix box alignment issues

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,9 +14,13 @@ body > .wrapper { height: auto; min-height: 100%; }
 
 .probe {
     color: #000;
-    padding: 10px 20px;
+    padding: 5px;
+}
+
+.probe>div {
     margin-right: 2%;
     margin-bottom: 2%;
+        padding: 10px 20px;
 
 }
 
